adicionando pagina home

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso HTML5 Avançado</title>
+    
 </head>
 <body>
-    
+    <a href="html-depreciado/index.html">Exemplo sem atualizando CSS</a>
+    <a href="html-depreciado/antigo.html">Exemplo sem atualização de depreciados</a>
 </body>
 </html>
