--- a/html-depreciado/antigo.html
+++ b/html-depreciado/antigo.html
@@ -41,7 +41,7 @@
         </tbody>
     </table>
 
-    <img src="hml.png" alt="Foto contendo a logo do HTML5" height="100">
+    <img src="html.png" alt="Foto contendo a logo do HTML5" height="100">
 
 </body>
 </html>
