--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="html-depreciado/index.html">Exemplo sem atualizando CSS</a>
     <a href="html-depreciado/antigo.html">Exemplo sem atualização de depreciados</a>
+    <a href="/sistema/admin/dashboard/index.html">Sistema Hotel</a>
 </body>
 </html>
