--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <a href="html-depreciado/index.html">Exemplo sem atualizando CSS</a>
     <a href="html-depreciado/antigo.html">Exemplo sem atualização de depreciados</a>
-    <a href="../html-avancado/sistema/admin/dashboard/index.html">Sistema Hotel</a>
+    <a href="sistema/index.html">Sistema Hotel</a>
+  
 </body>
 </html>
