--- a/sistema/admin/relatorios/index.html
+++ b/sistema/admin/relatorios/index.html
@@ -26,12 +26,34 @@
     </header>
 
     <main>
-        
+        <div class="reports-header">
+            <h2>Visualizar Relatórios</h2>
+            <div>
+                <button class="btn" onclick="window.print()">
+                    <i class="fa-solid fa-print"></i> Imprimir
+                </button>
+                <a href="../dashboard" class="btn">
+                    <i class="fa-solid fa-arrow-left"></i> Voltar
+                </a>
+            </div>
+        </div>
+
+        <div class="report-metadata">
+            <p><strong>Relatório:</strong>Ocupação Mensal</p>
+            <p><strong>Período:</strong>Agosto 2025</p>
+            <p><strong>Gerado em:</strong>23/08/2025</p>
+        </div>
+
+        <div class="chart-container">
+            <canvas id="reportChart"></canvas>
+        </div>
     </main>
 
     <footer>
         &copy; 2025 HoteSys. Todos os direitos reservados.
     </footer>
-
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../../assests/js/admin/pages/relatorios/index.js"></script>
+<script src="https://kit.fontawesome.com/6407b96dc5.js" crossorigin="anonymous"></script>
 </body>
 </html>
