--- a/sistema/admin/hospedes/editar.html
+++ b/sistema/admin/hospedes/editar.html
@@ -28,7 +28,7 @@
 
     <main>
         <div class="hospedes-header">
-            <h2>Adicionar Hóspede</h2>
+            <h2>Editar Hóspede</h2>
             <a href="index.html" class="btn">
                 <i class="fa-solid fa-arrow-left"></i> Voltar
             </a>
@@ -64,7 +64,7 @@
         &copy; 2025 HotelSys. Todos os direitos reservados.
     </footer>
     <script src="https://unpkg.com/imask"></script>
-    <script src="../../assets/js/admin/pages/hospedes/novo.js"></script>
+    <script src="../../assets/js/admin/pages/hospedes/editar.js"></script>
 </body>
 
 </html>
